# gazebo_model_attachment_plugin

./: .gitlab-ci.yml  .rosinstall  ACP.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
boeing_gazebo_model_attachment_plugin/: CMakeLists.txt  package.xml  setup.py
boeing_gazebo_model_attachment_plugin/include/boeing_gazebo_model_attachment_plugin/: boeing_gazebo_model_attachment_plugin.h
boeing_gazebo_model_attachment_plugin/src/: boeing_gazebo_model_attachment_plugin.cpp
boeing_gazebo_model_attachment_plugin/test/: test.world  test_plugin.test.py
boeing_gazebo_model_attachment_plugin_msgs/: .rosinstall  CMakeLists.txt  package.xml
gazebo_model_attachment_plugin/: CHANGELOG.rst  package.xml
gazebo_model_attachment_plugin/test/: test_plugin.test.py
gazebo_model_attachment_plugin_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
include/gazebo_ee_monitor_plugin/: gazebo_ee_monitor_plugin.h
include/gazebo_model_attachment_plugin/: gazebo_model_attachment_plugin.h
src/: gazebo_ee_monitor_plugin.cpp  gazebo_model_attachment_plugin.cpp
src/gazebo_model_attachment_plugin/: gazebo_client.py
srv/: Attach.srv
test/: test.world  test_plugin.py  test_plugin.test  test_plugin.test.py
