<?xml version="1.0"?>
<package>
    <name>gazebo_ee_monitor_plugin</name>
    <version>0.1.0</version>
    <description>World Plugin</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>gazebo_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>ee_manager</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>gazebo_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>ee_manager</run_depend>
    <run_depend>message_runtime</run_depend>
    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
