<?xml version="1.0"?>
<package format="2">
    <name>gazebo_model_attachment_plugin</name>
    <version>0.1.0</version>
    <description>World Plugin</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <maintainer email="Phillip.Haeusler@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>roscpp</depend>
    <depend>message_generation</depend>

    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
